# cast

./: .gitignore  CMakeLists.txt  compiler.py  example.cast  fft.cast  readme.md  simulate.sh  test.mlir
examples/: alarm.cast  binary_search.cast  checksum.cast  counter.cast  debounce.cast  example.cast  fibonacci.cast  gcd.cast  popcount.cast  pwm.cast  running_average.cast  shift_register.cast  simple.cast  test_min.cast  traffic_light.cast  uart_tx.cast
parser/: cast.lark  cast_parser.py
src/Frontend/: castLower.cpp  castLower.hpp  parser.cpp
src/Frontend/antlr/: cast.g4
tests/: run_cast_test.sh
tests/expected/: alarm.expected  binary_search.expected  checksum.expected  counter.expected  debounce.expected  fibonacci.expected  gcd.expected  popcount.expected  pwm.expected  running_average.expected  shift_register.expected  simple.expected  traffic_light.expected  uart_tx.expected
